; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_set_cursor.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_set_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oled_rotation_width = common dso_local global i64 0, align 8
@OLED_FONT_WIDTH = common dso_local global i64 0, align 8
@OLED_MATRIX_SIZE = common dso_local global i64 0, align 8
@oled_buffer = common dso_local global i32* null, align 8
@oled_cursor = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oled_set_cursor(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @oled_rotation_width, align 8
  %8 = mul i64 %6, %7
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @OLED_FONT_WIDTH, align 8
  %11 = mul i64 %9, %10
  %12 = add i64 %8, %11
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @OLED_MATRIX_SIZE, align 8
  %15 = icmp uge i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i64 0, i64* %5, align 8
  br label %17

17:                                               ; preds = %16, %2
  %18 = load i32*, i32** @oled_buffer, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32* %20, i32** @oled_cursor, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
